# ALife

./: CMakeLists.txt  README.md
include/: game.h
include/Events/: data.h  event.h  eventmanager.h
include/Forms/: consoleform.h  form.h  formmanager.h  mainmenuform.h  settingsform.h
include/GUI/: button.h  gui.h  label.h  layout.h  selector.h  selectorchild.h  spacer.h  textedit.h
include/GUI/crutches/: clickforselector.h
include/GUI/interfaces/: iclickable.h
include/Managers/: ConsoleManager.h
include/ResourceManagers/: audiomanager.h  fontmanager.h  languagemanager.h  shadermanager.h  spritemanager.h  texturemanager.h
res/Languages/: test.lang
src/: game.cpp  main.cpp
src/Events/: event.cpp  eventmanager.cpp
src/Forms/: consoleform.cpp  form.cpp  formmanager.cpp  mainmenuform.cpp  settingsform.cpp
src/GUI/: button.cpp  gui.cpp  label.cpp  layout.cpp  selector.cpp  selectorchild.cpp  spacer.cpp  textedit.cpp
src/GUI/crutches/: clickforselector.cpp
src/GUI/interfaces/: iclickable.cpp
src/Managers/: ConsoleManager.cpp
src/ResourceManagers/: audiomanager.cpp  fontmanager.cpp  languagemanager.cpp  shadermanager.cpp  spritemanager.cpp  texturemanager.cpp
